# reqres-api-tests

./: pyproject.toml
schemas/: schemas.py
tests/: test_reques.py
utils/: base_session.py
